25 May 2007 coudercd
 * fixed use of LIBS.
 * pmk now check for for ~/.pmk/pmk.conf and if not exists for 
   SYSCONFDIR/pmk/pmk.conf.

23 May 2007 coudercd
 * fixed function detection in library check.
 * added math library check in pmkfile.
 * updated data/pmkscan.dat database.

12 May 2007 coudercd
 * updated pmkfile and scanfile.
 * added missing tag generation for pmk library check.

07 May 2007 coudercd
 * put linker flags like library path and/or name after objects to fix
   link resolution on platforms where order is important.
 * build library targets first.
 * update scanfile.5 manual page with DEFINE_BIN.

04 May 2007 coudercd
 * added DEFINE_BIN to allow specification of a binary name by giving
   the name of it's main source.

21 Apr 2007 coudercd
 * added hash_create_simple_autogrow() which is almost the same as
   hash_create_simple() but with autogrow enabled.

16 Apr 2007 coudercd
 * removed ending line with only one dot that makes Linux complaining,
   noticed by Magnus Holmgren.
 * added a carriage return that was missing in pmkscan log file message.
 * updated main Makefile template to fix GEN_FILES, noticed by Magnus
   Holmgren.

15 Apr 2007 coudercd
 * fixed library source labels generation.
 * fixed object dependencies when an object is used in both a binary
   and a library to avoid duplicates.
 * fixed processing of pkg-config library directory to support
   multiples path, noticed by Marco Ghirlanda.

10 Apr 2007 coudercd
 * resized ressources in pmkscan for larger projects.
 * added more messages in pmkscan.

05 Apr 2007 coudercd
 * removed obsolete option LIBOBJ.
 * added missing initialisation of lib_type in the scanzone structure.

21 Mar 2007 coudercd
 * replaced blank lines by one dot lines in manual pages, notified by
   Magnus Holmgren.
 * fixed the duplicates in macro GEN_FILES of generated makefiles, also
   notified by Magnus Holmgren.

20 Mar 2007 coudercd
 * fixed errors in manual pages, notified by Magnus Holmgren.
